<resources>
    <string name="app_name">WeatherApp</string>

    <string name="St_Paul_MN">St. Paul, MN</string>
    <string name="temperature">%1$d°</string>
    <string name="feels_like">Feels like %1$d°</string>
    <string name="High">High %1$d°</string>
    <string name="Low">Low %1$d°</string>
    <string name="humidity">Humidity %1$d </string>
    <string name="pressure">Pressure %1$d hPa</string>
    <string name="button_text">Forecast</string>
    <string name="zip_code">ZipCode</string>
    <string name="submit">submit</string>
    <string name="ok">Ok</string>


</resources>
