<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/St_Paul_MN"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="12dp"
        android:text="@string/temperature"
        android:textColor="@color/black"
        android:textSize="72sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_name"
        tools:text="72°" />

    <ImageView
        android:id="@+id/condition_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:contentDescription="@null"
        android:scaleType="center"
        android:src="@drawable/sun"
        app:layout_constraintBottom_toBottomOf="@id/temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/temperature"
        app:layout_constraintTop_toTopOf="@id/temperature" />

    <TextView
        android:id="@+id/feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feels_like"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/temperature" />


    <TextView
        android:id="@+id/Low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Low"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/temperature" />


    <TextView
        android:id="@+id/High"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/High"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/Low"
        app:layout_constraintTop_toBottomOf="@id/Low" />

    <TextView
        android:id="@+id/Humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/humidity"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/High"
        app:layout_constraintTop_toBottomOf="@id/High" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/pressure"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/Humidity"
        app:layout_constraintTop_toBottomOf="@id/Humidity" />

    <Button
        android:id="@+id/BT"
        android:layout_width="160dp"
        android:layout_height="75dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="128dp"
        android:layout_marginTop="332dp"
        android:backgroundTint="@color/orange"
        android:onClick="goToForecast"
        android:text="@string/button_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="30dp"
        app:cornerRadius="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>