<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@drawable/gradient_bg"
    android:paddingHorizontal="12dp"
    android:visibility="visible"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="59dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-12dp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="76dp"
        android:gravity="start|center_vertical"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-4dp" />

    <TextView
        android:id="@+id/time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="8:00 AM"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="0.997"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="9:00 PM"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/low1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/Low"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/High"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/High"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:text="@string/temperature"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/temperature2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:text="Temp:"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Sunset:"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sunrise:"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="16dp" />

    <ImageView
        android:id="@+id/sun1"
        android:layout_width="75dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal|bottom"
        android:scaleType="center"
        android:src="@drawable/cloud"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="4dp" />


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="59dp"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Sunset:"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintHorizontal_bias="0.827"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="273dp"
            android:layout_height="20dp"
            app:layout_constraintTop_toBottomOf="parent" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>